data/all_generated_tests/raw_wast_tests/block_StackCorruption_1864.wast
;; 5. **Test Description**:    Use a combination of `br_if` and block instructions where conditional branching might lead to different stack states. Implement the conditional logic within the block that rearranges the stack elements. Validate the stack integrity post conditional control flow operations, ensuring proper stack management across implementations.

(assert_invalid
  (module (func (param i32) (result i32)
    (block (result i32)
      (i32.const 1)
      (br_if 0 (local.get 0))
      (drop)
      (i64.const 1)
    )
  ))
  "type mismatch"
)